bk_ida/gccida/c2/emit_block_move
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2100:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2103:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2120:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2122:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2123:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2124:5: error: expected ';' after expression
tree v42; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2124:6: error: use of undeclared identifier 'v42'
tree v42; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2125:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2126:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2127:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2128:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2129:5: error: expected ';' after expression
tree v47; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2129:6: error: use of undeclared identifier 'v47'
tree v47; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2130:5: error: expected ';' after expression
tree v48; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2130:6: error: use of undeclared identifier 'v48'
tree v48; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2138:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2142:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)y[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/expr.c:2162:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)y[1]; 
               ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_block_move/src/obj/expr.o] Error 1
